--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ google-cloud-bigquery
 openai
 pydantic
 requests
-spacy
+spacy==3.7.2
+https://github.com/explosion/spacy-models/releases/download/en_core_web_md-x.x.x/en_core_web_md-x.x.x.tar.gz
 streamlit
+toml
