--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ python-dotenv
 fastapi
 google-cloud-bigquery
 openai
-pydantic
+thinc==8.0.3
+pydantic==1.7.3
 requests
 spacy==3.1.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.1.0/en_core_web_md-3.1.0.tar.gz
